GNOME Bugzilla – Bug 681924
vm-creator: Don't put 'Live' in domain's title
Last modified: 2016-03-31 13:56:50 UTC
SSIA
Created attachment 221277 [details] [review] vm-creator: Don't put 'Live' in domain's title Now that we have a special CellRenderer in icon view that can display an optional 2nd line of text under the boxes, we use that to display supplementary information about the box. For now, we only show 'Live' or 'Installing..' when appropriate.
Review of attachment 221277 [details] [review]: looks good, especially when libgd will have more generic columns names ::: src/collection-view.vala @@ +201,3 @@ + model.set (iter, ModelColumns.INFO, machine.info); + }); + item.set_data<ulong> ("info_id", info_id); You do save info_id with set_data(), but you should realize why it's needed and fix that like the rest of the code you based on is doing.
(In reply to comment #0) > SSIA The subject is far from saying it all, the patch commit log does ;)
Created attachment 221314 [details] [review] libgd: Update GdMainColumns enum
Created attachment 221315 [details] [review] vm-creator: Don't put 'Live' in domain's title Now that we have a special CellRenderer in icon view that can display an optional 2nd line of text under the boxes, we use that to display supplementary information about the box. For now, we only show 'Live' or 'Installing..' when appropriate.
(In reply to comment #3) > (In reply to comment #0) > > SSIA > > The subject is far from saying it all, the patch commit log does ;) Hey, I'm new at this 'SSIA' thing. :)
Review of attachment 221314 [details] [review]: if it's upstream ack
Review of attachment 221315 [details] [review]: ack
Attachment 221314 [details] pushed as 6c62b19 - libgd: Update GdMainColumns enum Attachment 221315 [details] pushed as c43b51e - vm-creator: Don't put 'Live' in domain's title