libgd: Update GdMainColumns enum

https://bugzilla.gnome.org/show_bug.cgi?id=681924